# crewai1

./: .gitignore  README.md  pyproject.toml  report.md
src/crew_deploy/: crew.py  main.py
